# ontology-mcp

./: .gitignore  README.md  _test_mcp.py  _test_mcp_v2.py  batch_convert.py  complete_lifecycle_ontology.ttl  demo.py  lifecycle_tracker.py  mcp_config.json  mcp_server.py  pyproject.toml  regenerate.py  requirements.txt  requirements311.txt  sparql_query_examples.py  xml_to_rdf.py
README/: BATCH_CONVERT_GUIDE.md  SYSTEM_README.md
demos/: ONTOLOGY_VISUAL_GUIDE.md  demo_ontology_mapping.py
frontend/: app.js  index.html
src/: ONTOLOGY_LAYER_GUIDE.md
src/api/: __init__.py  financial_api_service.py  financial_ontology_api.py  mvp_api.py
src/ontology/: __init__.py  financial_ontology_mapper.py
src/ontology/schema/: financial_ontology.ttl
src/signals/: __init__.py  financial_signal_extraction.py  financial_signals.py  iso20022_extractor.py
test/: test_all_messages.py  test_c029.py  test_financial_data.py  test_ontology_mapping.py
xml_files/: camt026_unable_to_apply.xml  camt029_cancellation_rejected.xml  camt053_account_statement.xml  camt054_debit_credit_notification.xml  camt056_cancellation_request.xml  pacs008_payment_initiation.xml  pacs009_payment_settlement.xml
